@@ -1,3 +1,7 @@
+104
+- use new output from mediaclient
+  use xmlstartlet to parse settings.xml file
+
 103
 - once a serial number is in config file then ir_disabled parameter
   needs to be localized below it (it is not global parameter anymore)
